styles/styles.css
/*CSS Styles*/

.flex {
    display: flex;
    height: 100%;
    width: 100%;
    flex-direction: column;
    flex-wrap: nowrap;
}
.header
    {
        color: black;
    }
.footerleft
    {
        color:#70757a;
    }
a:hover 
    {
            text-decoration: underline;
    }
header 
    {
            margin-top: 22px;
    }
    
body, input, button 
    {
        font-size: 14px;
        font-family: arial, sans-serif;
    }
#logo 
    {
        display: flex;
        justify-content: center;
        margin-top: 80px;
    }
#search-bar 
    {
        display: flex;
        justify-content: center;
        margin-top: 40px;   
    }

#bar 
    {
        border: 1px solid #70757a;
        width:500px;
        height:40px;
        border-radius: 50px;
    }
    #bar:focus{
       outline: none;
    }
#buttons 
    {
        display: inline-block;
        justify-content: center;
        margin-top: 40px;
    }
ul 
    {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    }
li 
    {
      border-right: 20px solid white;
    }
.footer 
    {
      position: fixed;
      left:30px;
      bottom:0;
      color: #70757a;
      background-color: #f2f2f2;
    }
input:hover
{
    box-shadow: 0 0 5px 2px rgba(0,0,0,0.15)
}

